# python-project-83

./: .gitignore  Makefile  README.md  app.py  database.sql  pyproject.toml  setup.cfg
.github/workflows/: github-actions.yml
page_analyzer/: app.py  config.py  db.py  parser.py  parsers.py  utils.py  validator.py
page_analyzer/static/styles/: bootstrap.css  main.css
page_analyzer/templates/: base.html  index.html  urld_id.html  urls.html  urls_id.html
page_analyzer/templates/components/: footer.html  header.html  messages.html
page_analyzer/templates/errors/: 404.html  500.html
tests/: conftest.py  test_app.py  test_miscellaneous.py
